--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
   font-family: 'Garet';
   font-style: normal;
   font-weight: 300;
-  src: url('https://fonts.cdnfonts.com/s/57477/Garet-Book.woff2') format('woff2'),
+  src:
   url('https://fonts.cdnfonts.com/s/57477/Garet-Book.woff') format('woff'),
   url('https://fonts.cdnfonts.com/s/57477/Garet-Book.ttf') format('truetype');
 }
@@ -117,7 +117,7 @@ button {
 .react-flow__panel {
   display: flex;
   gap: 0.5rem;
-  margin: 0 0 0 5rem;
+  margin: 0 0 0 3rem;
 }
 
 .react-flow__attribution {
